--- a/02-scripts.backup/MID_tax_betadiv.Rmd
+++ b/02-scripts.backup/MID_tax_betadiv.Rmd
@@ -50,12 +50,33 @@ full_metadata <- full_metadata %>%
   mutate(`DNA_molecules_per_library_x10^6_log` = log10(`DNA_molecules_per_library_x10^6`))
 
 # sourcetracker results for 5000 rarefaction
-full_source_results <- fread("./05-results.backup/sink_predictions_full_sources_5000.txt")
+full_source_results <- fread("./05-results.backup/sink_predictions_full_sources_rarefied_51500.tsv")
 
-reduced_source_results <- fread("./05-results.backup/sink_predictions_reduced_sources_5000.txt")
+reduced_source_results <- fread("./05-results.backup/sink_predictions_reduced_sources_rarefied_51500.tsv")
 
 
 ```
+ 
+ 
+```{r}
+
+full_metadata %>%
+  select(Library_ID, No_reads_total) %>%
+  filter(No_reads_total < 10000000) %>%
+  filter(!str_detect(Library_ID, "CSS|CSD|CSN|CSL|EXB|LIB"))
+
+full_metadata %>%
+  select(Library_ID, seq_len_avg) %>%
+  filter(seq_len_avg > 70) 
+# %>%
+#   filter(str_detect(Library_ID, "CS"))
+# only CS samples need to be sub-sampled to have only reads with avg RL < 75bp
+# there are 7 CS samples that don't need this 
+# CS14, CS23, CS24, CS33, CS34, CS36, CS40
+
+```
+
+
 
 
 ```{r pca_name_fxn}
@@ -414,7 +435,7 @@ plot_pca_bi <- function(df, pc1, pc2, metadata_group, columntitle) {
 
 List the outliers from the plot in `MID_CMB_Rad_Kil_Iber_decontam.Rmd`. 
 ```{r outliers}
-outliers <- c("EXB059.A2501","LIB058.A0103","LIB058.A0106","CSS","CSD")
+outliers <- c("EXB059.A2501","LIB058.A0103","LIB058.A0106","CSS","CSD", "CS14","CS27","CS48") # the lat 3 Radcliffe samples have very few reads
 poor_samples <- fread("./05-results.backup/cuperdec_poor_samples.tsv") %>%
   pull(Sample)
 
@@ -467,10 +488,10 @@ all_species_decontam_filtered <- all_species_decontam %>%
 tune.pca(all_species_decontam_filtered, logratio = 'CLR')
 
 # perform and plot a PCA to see how the data cluster
-all_samples_sp_pca12 <- plot_pca(all_species_decontam_filtered, "PC1", "PC2", "Site", "Time_period", 3)
-all_samples_sp_pca12
-all_samples_sp_pca32 <- plot_pca(all_species_decontam_filtered, "PC3", "PC2", "Site", "Time_period", 3)
-all_samples_sp_pca32
+plot_pca(all_species_decontam_filtered, "PC1", "PC2", "Site", "Time_period", 3)
+
+plot_pca(all_species_decontam_filtered, "PC3", "PC2", "Site", "Time_period", 3)
+
 
 # ggsave("./06-publication/supplemental_figures/SXX28/SXX28_all_samples_sp_pca12.pdf", plot = all_samples_sp_pca12, device = "pdf",
 #        scale = 1, width = 6, height = 7, units = c("in"), dpi = 300)
@@ -478,6 +499,7 @@ all_samples_sp_pca32
 
 ```
 PC1 and PC2 don't distinguish the samples by time period, but PC3 does. 
+
 
 # Species-level analyses
 What is the relationship of the groups in a PCA without the blanks? Let's try
@@ -558,17 +580,17 @@ tune.pca(all_species_decontam_filtered_noblanks, logratio = 'CLR')
 
 # perform and plot a PCA to see how the data cluster
 # by Site
-mid_all_pc12 <- plot_pca(all_species_decontam_filtered_noblanks, "PC1", "PC2", "Site", "Time_period", 3)
-mid_all_pc12
+plot_pca(all_species_decontam_filtered_noblanks, "PC1", "PC2", "Site", "Time_period", 3)
+
 plot_pca(all_species_decontam_filtered_noblanks, "PC1", "PC3", "Site", "Time_period", 3)
 plot_pca(all_species_decontam_filtered_noblanks, "PC2", "PC3", "Site", "Time_period", 3)
-mid_all_pc32 <- plot_pca(all_species_decontam_filtered_noblanks, "PC3", "PC2", "Site", "Time_period", 3)
-mid_all_pc32
+plot_pca(all_species_decontam_filtered_noblanks, "PC3", "PC2", "Site", "Time_period", 3)
 
-ggsave("~/Desktop/MID_pca_all_pc12.pdf", plot = mid_all_pc12, device = "pdf",
-       scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
-ggsave("~/Desktop/MID_pca_all_pc32.pdf", plot = mid_all_pc32, device = "pdf",
-       scale = 1, width = 5, height = 5, units = c("in"), dpi = 300)
+
+# ggsave("~/Desktop/MID_pca_all_pc12.pdf", plot = mid_all_pc12, device = "pdf",
+#        scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
+# ggsave("~/Desktop/MID_pca_all_pc32.pdf", plot = mid_all_pc32, device = "pdf",
+#        scale = 1, width = 5, height = 5, units = c("in"), dpi = 300)
 
 ```
 
@@ -579,7 +601,6 @@ plot_pca(all_species_decontam_filtered_noblanks, "PC1", "PC2", "Region", "Time_p
 
 # by Time period
 plot_pca(all_species_decontam_filtered_noblanks, "PC1", "PC2", "Time_period", "Time_period", 3)
-
 # by Sex
 plot_pca(all_species_decontam_filtered_noblanks, "PC1", "PC2", "Sex", "Time_period", 3)
 
@@ -592,8 +613,8 @@ plot_pca(all_species_decontam_filtered_noblanks, "PC1", "PC2", "Caries_present",
 # by sampled tooth/teeth location
 all_tooth_pc12 <- plot_pca(all_species_decontam_filtered_noblanks, "PC1", "PC2", "Tooth_location", "Time_period", 3)
 all_tooth_pc12
-ggsave("~/Desktop/MID_pca_all_tooth_pc12.pdf", plot = all_tooth_pc12, device = "pdf",
-       scale = 1, width = 8, height = 5, units = c("in"), dpi = 300)
+# ggsave("~/Desktop/MID_pca_all_tooth_pc12.pdf", plot = all_tooth_pc12, device = "pdf",
+#        scale = 1, width = 8, height = 5, units = c("in"), dpi = 300)
 
 # by sampled tooth/teeth location
 plot_pca(all_species_decontam_filtered_noblanks, "PC1", "PC2", "alt_tooth_location", "Time_period", 3)
@@ -622,8 +643,8 @@ all_seqdepth_pc12 <- malt_species_decontam_filtered_noblanks.pca.varmet %>%
     labs(colour = "Seq. depth\n(reads)", shape = "Time period") +
     theme(legend.title = element_text(size = 10))
 all_seqdepth_pc12
-ggsave("~/Desktop/MID_pca_all_seqdepth_pc12.pdf", plot = all_seqdepth_pc12, device = "pdf",
-       scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
+# ggsave("~/Desktop/MID_pca_all_seqdepth_pc12.pdf", plot = all_seqdepth_pc12, device = "pdf",
+#        scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
 
 
 malt_species_decontam_filtered_noblanks.pca.varmet %>%
@@ -650,8 +671,8 @@ all_extract_pc12 <- malt_species_decontam_filtered_noblanks.pca.varmet %>%
     labs(colour = "[DNA Extract]\n(ng/uL)", shape = "Time period") +
     theme(legend.title = element_text(size = 10))
 all_extract_pc12
-ggsave("~/Desktop/MID_pca_all_extract_pc12.pdf", plot = all_extract_pc12, device = "pdf",
-       scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
+# ggsave("~/Desktop/MID_pca_all_extract_pc12.pdf", plot = all_extract_pc12, device = "pdf",
+#        scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
 
 
 malt_species_decontam_filtered_noblanks.pca.varmet %>%
@@ -680,8 +701,8 @@ all_modcalc_pc12 <- malt_species_decontam_filtered_noblanks.pca.varmet %>%
     labs(colour = "% modernCalculus", shape = "Time period") +
     theme(legend.title = element_text(size = 10))
 all_modcalc_pc12
-ggsave("~/Desktop/MID_pca_all_modcalc_pc12.pdf", plot = all_modcalc_pc12, device = "pdf",
-       scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
+# ggsave("~/Desktop/MID_pca_all_modcalc_pc12.pdf", plot = all_modcalc_pc12, device = "pdf",
+#        scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
 
 # by sourceTracker results % subgingival Plaque
 malt_species_decontam_filtered_noblanks.pca.varmet %>%
@@ -712,11 +733,32 @@ all_unknown_pc12 <- malt_species_decontam_filtered_noblanks.pca.varmet %>%
     labs(colour = "% Unknown", shape = "Time period") +
     theme(legend.title = element_text(size = 10))
 all_unknown_pc12
-ggsave("~/Desktop/MID_pca_all_unknown_pc12.pdf", plot = all_unknown_pc12, device = "pdf",
-       scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
+# ggsave("~/Desktop/MID_pca_all_unknown_pc12.pdf", plot = all_unknown_pc12, device = "pdf",
+#        scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
 
-# ggsave("05-results.backup/librarybatch.pdf", plot = extractionbatch, device = "pdf",
-#        scale = 1, width = 7, height = 5, units = c("in"), dpi = 300)
+# by average GC content
+malt_species_decontam_filtered_noblanks.pca.varmet %>%
+  ggplot(., aes(PC1, PC2, colour = gc_avg, shape = Time_period)) +
+    geom_point(size = 2.5) +
+    scale_shape_manual(values = Time_period_shapes) +
+    scale_color_viridis_c(option = "A") +
+    xlab(paste("PC1 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[1], 2)), "%", sep = "")) +
+    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[2], 2)), "%", sep = "")) +
+    theme_minimal(base_size = 14) +
+    labs(colour = "Avg. GC content (%)", shape = "Time period") +
+    theme(legend.title = element_text(size = 10))
+
+# by average read length
+malt_species_decontam_filtered_noblanks.pca.varmet %>%
+  ggplot(., aes(PC1, PC2, colour = seq_len_avg, shape = Time_period)) +
+    geom_point(size = 2.5) +
+    scale_shape_manual(values = Time_period_shapes) +
+    scale_color_viridis_c(option = "A") +
+    xlab(paste("PC1 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[1], 2)), "%", sep = "")) +
+    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[2], 2)), "%", sep = "")) +
+    theme_minimal(base_size = 14) +
+    labs(colour = "Avg. read length (bp)", shape = "Time period") +
+    theme(legend.title = element_text(size = 10))
 
 ```
 
@@ -724,7 +766,6 @@ ggsave("~/Desktop/MID_pca_all_unknown_pc12.pdf", plot = all_unknown_pc12, device
 
 # by Site
 plot_pca(all_species_decontam_filtered_noblanks, "PC3", "PC2", "Site", "Time_period", 3)
-
 # by Region
 plot_pca(all_species_decontam_filtered_noblanks, "PC3", "PC2", "Region", "Time_period", 3)
 
@@ -837,6 +878,30 @@ malt_species_decontam_filtered_noblanks.pca.varmet %>%
     ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[2], 2)), "%", sep = "")) +
     theme_minimal(base_size = 14) +
     labs(colour = "% Unknown", shape = "Time period") +
+    theme(legend.title = element_text(size = 10))
+
+# by average GC content
+malt_species_decontam_filtered_noblanks.pca.varmet %>%
+  ggplot(., aes(PC3, PC2, colour = gc_avg, shape = Time_period)) +
+    geom_point(size = 2.5) +
+    scale_shape_manual(values = Time_period_shapes) +
+    scale_color_viridis_c(option = "A") +
+    xlab(paste("PC3 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[3], 2)), "%", sep = "")) +
+    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[2], 2)), "%", sep = "")) +
+    theme_minimal(base_size = 14) +
+    labs(colour = "Avg. GC content (%)", shape = "Time period") +
+    theme(legend.title = element_text(size = 10))
+
+# by average read length
+malt_species_decontam_filtered_noblanks.pca.varmet %>%
+  ggplot(., aes(PC3, PC2, colour = seq_len_avg, shape = Time_period)) +
+    geom_point(size = 2.5) +
+    scale_shape_manual(values = Time_period_shapes) +
+    scale_color_viridis_c(option = "A") +
+    xlab(paste("PC3 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[3], 2)), "%", sep = "")) +
+    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[2], 2)), "%", sep = "")) +
+    theme_minimal(base_size = 14) +
+    labs(colour = "Avg. read length (bp)", shape = "Time period") +
     theme(legend.title = element_text(size = 10))
 
 ```
@@ -1119,8 +1184,8 @@ ggplot(malt_pca_values, aes(PC1, PC2, color = Region, shape = Region)) +
 # by pipe notch presence
 mid_pipe_pc12 <- plot_pca_mid(all_species_decontam_filtered_mid, "PC1", "PC2", "Pipenotch", "Pipenotch", 3, "Pipe notch")
 mid_pipe_pc12
-ggsave("~/Desktop/MID_pca_mid_pipe_pc12.pdf", plot = mid_pipe_pc12, device = "pdf",
-       scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
+# ggsave("~/Desktop/MID_pca_mid_pipe_pc12.pdf", plot = mid_pipe_pc12, device = "pdf",
+#        scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
 
 # by sex
 plot_pca_mid(all_species_decontam_filtered_mid, "PC1", "PC2", "Sex", "Pipenotch", 3, "Sex")
@@ -1170,20 +1235,20 @@ plot_pca_cont(all_species_decontam_filtered_mid, "PC1", "PC2", "%_positions_with
 # by minimum number of pipenotches 
 mid_minpipe_pc12 <- plot_pca_cont(all_species_decontam_filtered_mid, "PC1", "PC2", "Min_no_Pipe_notches", "Pipenotch", 3, "Min # pipe notches")
 mid_minpipe_pc12
-ggsave("~/Desktop/MID_pca_mid_minpipe_pc12.pdf", plot = mid_minpipe_pc12, device = "pdf",
-       scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
+# ggsave("~/Desktop/MID_pca_mid_minpipe_pc12.pdf", plot = mid_minpipe_pc12, device = "pdf",
+#        scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
 
 # by sequencing depth 
 mid_seqdepth_pc12 <- plot_pca_cont(all_species_decontam_filtered_mid, "PC1", "PC2", "No_reads_total", "Pipenotch", 3, "Total reads into MALT")
 mid_seqdepth_pc12
-ggsave("~/Desktop/MID_pca_mid_seqdepth_pc12.pdf", plot = mid_seqdepth_pc12, device = "pdf",
-       scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
+# ggsave("~/Desktop/MID_pca_mid_seqdepth_pc12.pdf", plot = mid_seqdepth_pc12, device = "pdf",
+#        scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
 
 # by sampled tooth site(s)
 mid_tooth_pc12 <- plot_pca_mid(all_species_decontam_filtered_mid, "PC1", "PC2", "Tooth_location", "Pipenotch", 3, "Tooth location")
 mid_tooth_pc12
-ggsave("~/Desktop/MID_pca_mid_tooth_pc12.pdf", plot = mid_tooth_pc12, device = "pdf",
-       scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
+# ggsave("~/Desktop/MID_pca_mid_tooth_pc12.pdf", plot = mid_tooth_pc12, device = "pdf",
+#        scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
 
 # by sampled tooth site(s)
 plot_pca_mid(all_species_decontam_filtered_mid, "PC1", "PC2", "alt_tooth_location", "Pipenotch", 3, "Tooth location")
@@ -1197,8 +1262,8 @@ plot_pca_cont(all_species_decontam_filtered_mid, "PC1", "PC2", "extract_conc_ng/
 # by [DNA] after extraction per uL of eluate
 mid_extract_pc12 <- plot_pca_cont(all_species_decontam_filtered_mid, "PC1", "PC2", "extract_conc_ng/uL", "Pipenotch", 3, "DNA extract concentration (ng/uL)")
 mid_extract_pc12
-ggsave("~/Desktop/MID_pca_mid_extract_pc12.pdf", plot = mid_extract_pc12, device = "pdf",
-       scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
+# ggsave("~/Desktop/MID_pca_mid_extract_pc12.pdf", plot = mid_extract_pc12, device = "pdf",
+#        scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
 
 # by [DNA] after storage, before building libraries
 plot_pca_cont(all_species_decontam_filtered_mid, "PC1", "PC2", "extract_conc_after_storage_ng/mg", "Pipenotch", 3, "DNA extract concentration after storage (ng/uL)")
@@ -1206,26 +1271,36 @@ plot_pca_cont(all_species_decontam_filtered_mid, "PC1", "PC2", "extract_conc_aft
 # by # of molecules in the library after indexing amplification
 mid_library_pc12 <- plot_pca_cont(all_species_decontam_filtered_mid, "PC1", "PC2", "DNA_molecules_per_library_x10^6_log", "Pipenotch", 3, "log10(DNA_molecules_per_library_x10^6)")
 mid_library_pc12
-ggsave("~/Desktop/MID_pca_mid_library_pc12.pdf", plot = mid_library_pc12, device = "pdf",
-       scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
+# ggsave("~/Desktop/MID_pca_mid_library_pc12.pdf", plot = mid_library_pc12, device = "pdf",
+#        scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
 
 # by % attributed to modern calculus by sourcetracker
 mid_modalc_pc12 <- plot_pca_cont(all_species_decontam_filtered_mid, "PC1", "PC2", "modernCalculus", "Pipenotch", 3, "% modern calculus")
 mid_modalc_pc12
-ggsave("~/Desktop/MID_pca_mid_modcalc_pc12.pdf", plot = mid_modalc_pc12, device = "pdf",
-       scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
+# ggsave("~/Desktop/MID_pca_mid_modcalc_pc12.pdf", plot = mid_modalc_pc12, device = "pdf",
+#        scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
 
 # by % attributed to subgingical plaque by sourcetracker
 mid_plaque_pc12 <- plot_pca_cont(all_species_decontam_filtered_mid, "PC1", "PC2", "subPlaque", "Pipenotch", 3, "% subgingival plaque")
 mid_plaque_pc12
-ggsave("~/Desktop/MID_pca_mid_subplaque_pc12.pdf", plot = mid_plaque_pc12, device = "pdf",
-       scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
+# ggsave("~/Desktop/MID_pca_mid_subplaque_pc12.pdf", plot = mid_plaque_pc12, device = "pdf",
+#        scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
 
 # by % attributed to unknown source by sourcetracker
 mid_unknown_pc12 <- plot_pca_cont(all_species_decontam_filtered_mid, "PC1", "PC2", "Unknown", "Pipenotch", 3, "% Unknown source")
 mid_unknown_pc12
-ggsave("~/Desktop/MID_pca_mid_unknown_pc12.pdf", plot = mid_unknown_pc12, device = "pdf",
-       scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
+# ggsave("~/Desktop/MID_pca_mid_unknown_pc12.pdf", plot = mid_unknown_pc12, device = "pdf",
+#        scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
+
+# by soil type
+plot_pca_mid(all_species_decontam_filtered_mid, "PC1", "PC2", "Soil", "Pipenotch", 3, "Soil type")
+
+# by average GC content
+plot_pca_cont(all_species_decontam_filtered_mid, "PC1", "PC2", "gc_avg", "Time_period", 3, "Avg. GC content (%)")
+
+# by average read length
+plot_pca_cont(all_species_decontam_filtered_mid, "PC1", "PC2", "seq_len_avg", "Time_period", 3, "Avg. read length (bp)")
+
 
 # with names
 # pca.list <- mixOmics::pca(all_species_decontam_filtered_mid, ncomp = 3, logratio = 'CLR')
@@ -1320,6 +1395,16 @@ plot_pca_cont(all_species_decontam_filtered_mid, "PC3", "PC2", "subPlaque", "Pip
 
 # by % attributed to unknown source by sourcetracker
 plot_pca_cont(all_species_decontam_filtered_mid, "PC3", "PC2", "Unknown", "Pipenotch", 3, "% Unknown source")
+
+# by soil type
+plot_pca_mid(all_species_decontam_filtered_mid, "PC3", "PC2", "Soil", "Pipenotch", 3, "Soil type")
+
+# by average GC content
+plot_pca_cont(all_species_decontam_filtered_mid, "PC3", "PC2", "gc_avg", "Time_period", 33, "Avg. GC content (%)")
+
+# by average read length
+plot_pca_cont(all_species_decontam_filtered_mid, "PC3", "PC2", "seq_len_avg", "Time_period", 33, "Avg. read length (bp)")
+
 
 ```
 
